--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -5,7 +5,7 @@ body {
 }
 .wrapper {
   width: 100%;
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 10px 0px;
   h1 {
@@ -70,19 +70,21 @@ body {
     background-color: #0c9fc7;
     color: #fff;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 18px;
     padding: 10px;
     border-radius: 10px;
-    button {
-      width: 40px;
-      height: 30px;
-      cursor: pointer;
-      outline: none;
-      border: none;
-      background-color: transparent;
-      img {
-        width: 100%;
-        height: 100%;
+    .options {
+      button {
+        width: 40px;
+        height: 30px;
+        cursor: pointer;
+        outline: none;
+        border: none;
+        background-color: transparent;
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
